| Summary: | ASTERISK-25538: [patch]Missing PID in syslog logger messages | ||
| Reporter: | Javier Acosta (DarkS) | Labels: | |
| Date Opened: | 2015-11-10 10:21:42.000-0600 | Date Closed: | 2016-09-23 14:22:54 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Logging |
| Versions: | 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) logger-patch.txt | |
| Description: | After the code rewriting in this module, the syslog line is not writing the PID of the Asterisk | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-11-10 10:21:43.160-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Javier Acosta (DarkS) 2015-11-10 10:23:02.849-0600 This is the patch for getting back the PID in syslog messages By: Rusty Newton (rnewton) 2015-11-10 18:19:08.895-0600 Once you've followed the Code Review process [1] and submitted your code to Gerrit [2] be sure to edit this JIRA issue and add the Gerrit review URL in the appropriate field. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage | ||